--- a/index.html
+++ b/index.html
@@ -15,5 +15,29 @@
       my skills to reach businesses needs.
     </p> <!--Brief explanation about me as paragraph-->
 
+    <h2>İlgi Alanlarım</h2>
+    <ol>
+      <li>Film</li>
+      <ul>
+        <li><a href="https://www.imdb.com/title/tt0485947/?ref_=fn_al_tt_3/">Mr. Nobody</a></li>
+        <li>Catch Me If You Can</li>
+        <li>LOTR</li>
+      </ul>
+      <li>Dizi</li>
+      <ul>
+        <li><a href="https://www.imdb.com/title/tt4158110/">Mr. Robot</a></li>
+        <li><a href="https://www.imdb.com/title/tt2467372/?ref_=nv_sr_srsg_0">Brooklyn Nine Nine</a></li>
+        <li>How I Met Your Mother</li>
+      </ul>
+      <li>Kitap</li>
+      <ul>
+        <li>The Hitchhiker's Guide to the Galaxy</li>
+        <li><a href="https://www.goodreads.com/book/show/23692271-sapiens?from_search=true&from_srp=true&qid=RJJbfPnNGR&rank=1">Sapiens: A Brief History of Humankind</a></li>
+        <li>Guns, Germs, and Steel: The Fates of Human Societies</li>
+      </ul>
+    </ol>
+
+    <img src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="coding background">
+
   </body>
 </html>
